src/objects/Integration_Logs__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integration Logs</relationshipLabel>
        <relationshipName>Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Account</label>
        <referenceTo>FinanceAccount__c</referenceTo>
        <relationshipLabel>Integration Logs</relationshipLabel>
        <relationshipName>Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>CCI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>Status code from the integration response</description>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <description>Status value from http requests</description>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Integration Logs</label>
    <nameField>
        <displayFormat>IL-{00000000}</displayFormat>
        <label>Integration Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>